--- a/newsViewContent.html
+++ b/newsViewContent.html
@@ -8,20 +8,20 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.part.css" />
 		<style type="text/css">
 			body {
-				margin: 15px;
+				margin: 16px;
 			}
 			p {
-				line-height: 140%;
+				line-height: 1.5em;
 				color: #444444;
 			}
 			.post-title {
 				margin: 0;
-				font-size: 1.5em;
+				font-size: 22px;
 				color: black;
 				line-height: 100%;
 			}
 			.post-title-info {
-				font-size: 0.9em;
+				font-size: 14px;
 				color: #666666;
 			}
 			#loading {
